[project]
name = "roshan"
version = "0.1.0"
description = "Reinforcement-learning Oriented Simulation for Hierarchical Agent Navigation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "tabulate",
    "tensorboard",
    "pyyaml",
    "optuna",
    "packaging",
]

[project.optional-dependencies]
llm = [
    "transformers[torch]",
    "optimum",
    "onnxruntime",
    "onnx",
    "bitsandbytes",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []
